# signet

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  NOTICE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: architecture.md  audit-archive-format.md  bench.md  bug-hunt-log.md  changelog.md  contributing.md  deploying.md  escalation.md  index.md  plugin-authors.md  plugin_dev.md  realtime.md  security.md  streaming.md
docs/checks/: classification_gate.md  continuing_consent.md  loopback_trust.md  owner_resolution.md  prompt_injection.md  rate_limit.md  regex_content.md  scope_drift.md  token_budget.md  tool_call_inspector.md
docs/integrations/: auth.md
examples/: README.md  anthropic_example.py  langchain_example.py  openai_example.py
examples/docker-compose/: .env.example  Dockerfile.signet  README.md  docker-compose.yml  pipeline.py  prometheus.yml
examples/github-action/: README.md
examples/github-action/.github/workflows/: signet-check.yml
examples/kubernetes/: Chart.yaml  README.md  values.yaml
examples/kubernetes/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  pvc.yaml  secret.yaml  service.yaml
src/signet/: __init__.py  bench.py  cli.py
src/signet/adapters/: __init__.py  anthropic.py  langchain.py  openai.py
src/signet/audit/: __init__.py  anchor.py  backend.py  chain.py  compactor.py  keyring.py  verifier.py
src/signet/checks/: __init__.py  classification_gate.py  continuing_consent.py  loopback_trust.py  owner_resolution.py  prompt_injection.py  rate_limit.py  redis_rate_limit_state.py  regex_content.py  scope_drift.py  token_budget.py  tool_call_inspector.py
src/signet/cli_helpers/: __init__.py  probe_injection_corpus.py
src/signet/core/: __init__.py  audit.py  check.py  context.py  owner.py  pipeline.py  stage.py
src/signet/plugins/: __init__.py  discovery.py  sandbox.py  tribunal.py
src/signet/server/: __init__.py  app.py  config.py  metrics.py  realtime.py  receipt.py  redis_session_store.py  session.py
tests/adversarial/: conftest.py  test_bypass_attempts.py
tests/integration/: conftest.py  test_against_ollama.py  test_against_rigrun.py  test_audit_tampering_matrix.py  test_constructor_regression.py  test_plugin_discovery.py  test_probe_corpus.py  test_round4_hunt.py  test_round7_audit_hunt.py  test_streaming_harness.py  test_v0181_regression.py  test_v018_regression.py
tests/unit/: test_adapters.py  test_anchor.py  test_audit_chain.py  test_audit_compaction.py  test_audit_entry.py  test_bench.py  test_check.py  test_checks.py  test_cli.py  test_constructor_aliases.py  test_owner.py  test_pipeline.py  test_plugins.py  test_realtime.py  test_redis_adapters.py  test_round11_hunt.py  test_round13_hunt.py  test_round14_hunt.py  test_round15_hunt.py  test_round16_hunt.py  test_round17_cli_hunt.py  test_round17_hunt.py  test_round18_hunt.py  test_round19_cli_hunt.py  test_round19_hunt.py  test_round21_hunt.py  test_round23_hunt.py  test_round25_hunt.py  test_round27_discovery_hunt.py  test_round27_hunt.py  test_round4_hunt.py  test_round7_server.py  test_round7_streaming.py  test_round9_hunt.py  test_server_app.py  test_streaming.py  test_truncation_metric.py  test_upstream_label.py  test_v017_polish.py  test_v018_followup.py
