[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "signet-sign"
version = "0.1.7rc2"
description = "Capability-based safety gates for LLM agents. The model proposes; signet authorizes."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Jesse Morgan", email = "jeranaias@gmail.com" },
]
keywords = [
    "agent",
    "anthropic",
    "audit",
    "audit-trail",
    "capability",
    "capability-security",
    "compliance",
    "guardrails",
    "hmac",
    "llm",
    "nist",
    "openai",
    "policy-enforcement",
    "proxy",
    "safety",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
    "click>=8.1",
    "pyyaml>=6.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
anthropic = ["anthropic>=0.30"]
langchain = ["langchain-core>=0.2"]
ed25519 = ["cryptography>=42.0"]
redis = ["redis>=5.0"]
prometheus = ["prometheus-client>=0.20"]
all = [
    "openai>=1.40",
    "anthropic>=0.30",
    "langchain-core>=0.2",
    "cryptography>=42.0",
    "redis>=5.0",
    "prometheus-client>=0.20",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "pre-commit>=3.7",
    # Optional-dep stand-ins so the dev environment exercises the full surface
    "cryptography>=42.0",
    "redis>=5.0",
    "fakeredis>=2.20",
    "prometheus-client>=0.20",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.scripts]
signet = "signet.cli:main"

[project.urls]
Homepage = "https://github.com/jeranaias/signet"
Documentation = "https://jeranaias.github.io/signet"
Repository = "https://github.com/jeranaias/signet"
Issues = "https://github.com/jeranaias/signet/issues"
Changelog = "https://github.com/jeranaias/signet/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/signet"]

[tool.hatch.build.targets.sdist]
include = [
    "src/signet",
    "tests",
    "README.md",
    "LICENSE",
    "NOTICE",
    "CHANGELOG.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default arg (FastAPI Depends pattern)
    "S101",   # assert (allowed in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "B", "RUF001", "RUF002", "RUF003"]
# The PromptInjection check + its tests deliberately contain Unicode
# confusables (Cyrillic / Greek / Cherokee lookalikes, full-width ASCII)
# because the whole purpose of the file is to detect / fold them.
"src/signet/checks/prompt_injection.py" = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--showlocals",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit a live LLM endpoint (slow)",
    "adversarial: deliberate bypass attempts; must all be blocked",
]

[tool.coverage.run]
source = ["src/signet"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
